--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ rusqlite = { version = "0.37.0", features = ["bundled"] }
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 clap = { version = "4.5", features = ["derive"] }
 thiserror = "2.0.17"
 anyhow = "1.0" # Pour une gestion d'erreurs plus simple
+actix-web = "4.5"
+actix-files = "0.6"
+actix-cors = "0.7"
