--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ anyhow = "1.0" # Pour une gestion d'erreurs plus simple
 actix-web = "4.5"
 actix-files = "0.6"
 actix-cors = "0.7"
+tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
+futures-util = "0.3"
