--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ binance = "0.21.0" # Vérifie la dernière version de binance-rs
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4"
+chrono-tz = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = { version = "4.5", features = ["derive"] }
